--- a/actividades.html
+++ b/actividades.html
@@ -17,8 +17,8 @@
         <section class="filtro-actividades">
             <h2>Seleccionar Actividades</h2>
             <div class="botones">
-                <button class="btn" id="btnUniversitarias">Universitarias</button>
-                <button class="btn" id="btnExtracurriculares">Extracurriculares</button>
+                <button class="btn" id="btnUniversitarias">Actividades Academicas</button>
+                <button class="btn" id="btnExtracurriculares">Actividades Extracurriculares</button>
             </div>
         </section>
 
